# ludtwig

./: .dockerignore  .gitignore  .ludtwig-conf.xml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  example.html  ludtwig-config.toml  simple.html
.github/: dependabot.yml
.github/workflows/: actionlint.yml  build.yml  ci.yml  lint.yml  publish.yml  release.yml  rust.yml
crates/ludtwig/: CHANGELOG.md  Cargo.toml  README.md  ludtwig-config.toml
crates/ludtwig-parser/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/ludtwig-parser/.github/workflows/: ci.yml
crates/ludtwig-parser/benches/: parsing_benchmark.rs
crates/ludtwig-parser/src/: ast.rs  ast_context_iter.rs  ast_iter.rs  error.rs  grammar.rs  lexer.rs  lib.rs  parser.rs  syntax.rs
crates/ludtwig-parser/src/grammar/: html.rs  twig.rs
crates/ludtwig-parser/src/grammar/twig/: expression.rs  literal.rs  shopware.rs  tags.rs
crates/ludtwig-parser/src/lexer/: mod.rs
crates/ludtwig-parser/src/parser/: event.rs  expression.rs  general.rs  html.rs  marker.rs  parse_error.rs  sink.rs  source.rs  twig.rs
crates/ludtwig-parser/src/syntax/: mod.rs  typed.rs  untyped.rs
crates/ludtwig/src/: attribute.rs  check.rs  config.rs  error.rs  main.rs  output.rs  process.rs  writer.rs
crates/ludtwig/src/check/: mod.rs  naming_convention.rs  rule.rs  rules.rs
crates/ludtwig/src/check/rules/: duplicate_block_names.rs  html_attribute_name_kebab_case.rs  html_duplicate_id.rs  html_string_quotation.rs  indentation.rs  line_ending.rs  ludtwig_ignore_file_not_on_top.rs  mod.rs  twig_block_duplicate.rs  twig_block_line_breaks.rs  twig_block_name_snake_case.rs  twig_hash_key_no_quotes.rs  twig_json_encode_escape_js.rs  twig_logic_and.rs  twig_logic_or.rs  twig_logic_same_as.rs  twig_prefer_shopware_extends.rs  twig_prefer_sw_extends_over_extends.rs  twig_string_quotation.rs  twig_use_is_not_same_as.rs  twig_use_is_same_as.rs  twig_use_not_same_as.rs  twig_valid_filter.rs  twig_valid_function.rs  twig_valid_test.rs  twig_variable_definition_naming.rs  twig_variable_name_camel_case.rs  unknown_token.rs  use_not_same_as.rs  whitespace_between_line_breaks.rs
docs/: concept-grammar.pest  grammar.pest  shopware_suggested_twig_cs.md
example_files/: another-whitespace-sensitive-example.html.twig  complex-vue-only.html  complex.html  complex.html.twig
fixtures/: complex-syntax-error.html.twig  complex.html.twig  spread-twig-attributes.html.twig  twig-component.html.twig
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: main.rs
libs/twig/: Cargo.toml  README.md
libs/twig/benches/: parsing_benchmark.rs
libs/twig/fixtures/: complex-failing.html.twig  complex.html.twig
libs/twig/src/: ast.rs  error.rs  lib.rs
libs/twig/src/parser/: general.rs  html.rs  mod.rs  twig.rs  vue.rs
src/: analyzer.rs  attribute.rs  config.rs  main.rs  output.rs  parser.rs  process.rs  writer.rs
