[package]
name = "ludtwig-parser"
description = "Lossless parser for HTML / Twig templating syntax."
keywords = ["parser", "twig", "html", "template"]
categories = ["parser-implementations"]
repository = "https://github.com/MalteJanz/ludtwig"
documentation = "https://docs.rs/ludtwig-parser"
version = "0.5.3"
authors = ["Malte Janz <service.malte.j@protonmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[[bench]]
name = "parsing_benchmark"
harness = false

[dev-dependencies]
criterion = "0.5.1"
expect-test = "1.4"

[dependencies]
rowan = "0.15.15"
logos = "0.14.0"
regex = "1.10"
once_cell = "1.19"
