[package]
name = "ludtwig-parser"
description = "Lossless parser for HTML / Twig templating syntax."
keywords = ["parser", "twig", "html", "template"]
categories = ["parser-implementations"]
repository = "https://github.com/MalteJanz/ludtwig"
documentation = "https://docs.rs/ludtwig-parser"
version = "0.7.0"
authors = ["Malte Janz <service.malte.j@protonmail.com>"]
license = "MIT"
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[[bench]]
name = "parsing_benchmark"
harness = false

[dev-dependencies]
criterion = "0.8.1"
expect-test = "1.5.1"

[dependencies]
rowan = "0.16.1"
logos = "0.16.0"
regex = "1.12.2"
