[package]
name = "ludtwig"
description = "Linter / Formatter for Twig template files which respects HTML and your time"
keywords = ["formatter", "analyzer", "html", "twig", "template"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
repository = "https://github.com/MalteJanz/ludtwig"
readme = "../../README.md"
version = "0.8.3"
authors = ["Malte Janz <service.malte.j@protonmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ludtwig-parser = { path = "../ludtwig-parser", version = "0.5.3" }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
ignore = "0.4.23"
figment = { version = "0.10.19", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.11"
codespan-reporting = "0.11.1"

[dev-dependencies]
expect-test = "1.5"
