[package]
name = "ludtwig"
description = "Linter / Formatter for Twig template files which respects HTML and your time"
keywords = ["formatter", "analyzer", "html", "twig", "template"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
repository = "https://github.com/MalteJanz/ludtwig"
readme = "../../README.md"
version = "0.9.0"
authors = ["Malte Janz <service.malte.j@protonmail.com>"]
license = "MIT"
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ludtwig-parser = { path = "../ludtwig-parser", version = "0.6.0" }
clap = { version = "4.5.23", features = ["derive"] }
rayon = "1.10.0"
ignore = "0.4.23"
figment = { version = "0.10.19", features = ["toml", "env"] }
serde = { version = "1.0.215", features = ["derive"] }
regex = "1.11.1"
codespan-reporting = "0.11.1"

[dev-dependencies]
expect-test = "1.5.0"
