[package]
name = "ludtwig"
description = "Linter / Formatter for Twig template files which respects HTML and your time"
keywords = ["formatter", "analyzer", "html", "twig", "template"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
repository = "https://github.com/MalteJanz/ludtwig"
readme = "../../README.md"
version = "0.10.0"
authors = ["Malte Janz <service.malte.j@protonmail.com>"]
license = "MIT"
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ludtwig-parser = { path = "../ludtwig-parser", version = "0.7.0" }
clap = { version = "4.5.51", features = ["derive"] }
rayon = "1.11.0"
ignore = "0.4.25"
figment = { version = "0.10.19", features = ["toml", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.2"
codespan-reporting = "0.12.0"

[dev-dependencies]
expect-test = "1.5.1"
