[package]
name = "twig"
version = "0.1.0"
authors = ["Malte Janz <malte.janz@yahoo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[profile.release]
lto = true # does increase runtime performance for longer build times

[[bench]]
name = "parsing_benchmark"
harness = false

[dev-dependencies]
criterion = "^0.3.3"

[dependencies]
nom = "~6.0.1"
